--- a/src/app/bar-chart/bar-chart.component.scss
+++ b/src/app/bar-chart/bar-chart.component.scss
@@ -4,7 +4,7 @@ app-bar-chart {
         width: inherit;
 
         .bar {
-            fill: steelblue;
+            fill: #cecece;
         }
         
         .bar:hover {
