--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
-<h1>Bar Chart</h1>
-<app-bar-chart [data]="data | async"></app-bar-chart>
+<app-navbar></app-navbar>
+<mat-card>
+  <mat-card-title><h2>Bar Chart</h2></mat-card-title>
+  <app-bar-chart [data]="data | async"></app-bar-chart>
+  <mat-card-actions>
+    <button mat-button>Click Me!</button>
+  </mat-card-actions>
+</mat-card>
